name:           tct-bundle
version:        3.3.0
description:    Bundles executables of Tct framework
homepage:       https://github.com/computationwithboundedresrouces/tct-configurations
author:         Michael Schaper
maintainer:     michael.schaper@studen.uibk.ac.at
copyright:      2019 Michael Schaper
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files: README.md
cabal-version: >= 1.10


executable tct-trs
  main-is:            Main.hs
  hs-source-dirs:     tct-trs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5, tct-core, tct-trs
  default-extensions: FlexibleInstances, MultiParamTypeClasses
  default-language:   Haskell2010

executable tct-hoca
  main-is:            Main.hs
  hs-source-dirs:     tct-hoca
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5, tct-core, tct-trs, tct-hoca
  default-extensions: FlexibleInstances, MultiParamTypeClasses
  default-language:   Haskell2010

executable tct-its
  main-is:            Main.hs
  hs-source-dirs:     tct-its
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5, tct-core, tct-its
  default-extensions: FlexibleInstances, MultiParamTypeClasses
  default-language:   Haskell2010

